force-app/main/default/objects/Property__c/fields/Date_of_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reservation__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When customer made a reservation for a property.</description>
    <label>Date of Reservation</label>
    <type>Date</type>
</CustomField>