force-app/main/default/objects/Property__c/fields/Floor_Space__c.field-meta.xml
<CustomField>
    <fullName>Floor_Space__c</fullName>
    <label>Floor Space</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>