force-app/main/default/objects/Property__c/fields/Parent_Property__c.field-meta.xml
<CustomField>
    <fullName>Parent_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>SubProperties</relationshipLabel>
    <relationshipName>Subproperties</relationshipName>
    <type>Lookup</type>
</CustomField>