force-app/main/default/objects/Property__c/fields/Price_per_m2__c.field-meta.xml
<CustomField>
    <fullName>Price_per_m2__c</fullName>
    <formula>Price__c / Floor_Space__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price per m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>