force-app/main/default/objects/Property__c/fields/Subproperty_Type__c.field-meta.xml
<CustomField>
    <fullName>Subproperty_Type__c</fullName>
    <label>Subproperty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sklep</fullName>
                <default>true</default>
                <label>Sklep</label>
            </value>
            <value>
                <fullName>Garáž</fullName>
            </value>
            <value>
                <fullName>Terasa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>