force-app/main/default/objects/Property__c/recordTypes/Subproperty.recordType-meta.xml
<RecordType>
    <fullName>Subproperty</fullName>
    <active>true</active>
    <label>Subproperty</label>
</RecordType>