force-app/main/default/objects/Property__c/validationRules/Date_Of_Reservation_Must_Be_Today_Or_Lat.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Of_Reservation_Must_Be_Today_Or_Lat</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Reservation__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Reservation__c</errorDisplayField>
    <errorMessage>Date of Reservation must be today or later.</errorMessage>
</ValidationRule>