force-app/main/default/objects/Property__c/validationRules/Discount_Higher_Than_10_Not_Above_100k.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Higher_Than_10_Not_Above_100k</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Discount__c &gt; 0.1,
Price__c &gt; 100000
)</errorConditionFormula>
    <errorMessage>Discount higher than 10% not allowed at Properties with Price higher than 100 000.</errorMessage>
</ValidationRule>