force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Phone__c</columns>
    <columns>Price_per_m2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>